--- a/debian/rules
+++ b/debian/rules
@@ -70,6 +70,7 @@ ifeq (true, $(RUN_TESTS))
 	set -ex; \
 		cd src; \
 		export PATH="$(GOROOT)/bin:$$PATH"; \
+	        export PPROF_BINARY_PATH=$$(env -i go env GOTOOLDIR); \
 		eval "$$(go tool dist env)"; \
 		bash run.bash -k -no-rebuild;
 	# -k           keep going even when error occurred
