Try to run tests with a writable HOME directory for pbuilder

--- a/debian/rules
+++ b/debian/rules
@@ -16,12 +16,14 @@ export GOCACHE := $(CURDIR)
 # See https://github.com/golang/go/blob/go1.10rc1/src/syscall/exec_linux_test.go#L26-L42
 export container = lxc
 
-# NOTE: Skip tests to build and test go1.10rc1 successfully in pbuilder.
-# We have to set DEB_BUILD_OPTIONS in this file to build the package
-# in LaunchPad PPA.
-# https://askubuntu.com/questions/26214/tell-launchpad-what-deb-build-options-to-use-when-building-ppa-package
-# TODO: Find a way to run tess successfully.
-export DEB_BUILD_OPTIONS := nocheck
+# NOTE: Set HOME to a writable directory to avoid the following test error when
+# we build golang in pbuilder.
+#    --- FAIL: TestHttpsInsecure (10.03s)
+#            proftest.go:114: Could not use temp dir /nonexistent/pprof: mkdir /nonexistent: permission denied
+# https://github.com/golang/go/blob/go1.10rc1/src/cmd/vendor/github.com/google/pprof/internal/driver/fetch.go#L283-L303
+# https://github.com/golang/go/blob/go1.10rc1/src/cmd/vendor/github.com/google/pprof/internal/driver/fetch.go#L272-L281
+# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=441052
+export HOME := /tmp
 
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH 2>/dev/null)
 RUN_TESTS := true
