--- a/debian/rules
+++ b/debian/rules
@@ -7,15 +7,6 @@ export GOVER := $(shell perl -w -mDpkg::Version -e 'Dpkg::Version->new(`dpkg-par
 export GOROOT := $(CURDIR)
 export GOROOT_FINAL := /usr/lib/go-$(GOVER)
 
-# NOTE: Set HOME to a writable directory to avoid the following test error when
-# we build golang in pbuilder.
-#    --- FAIL: TestHttpsInsecure (10.03s)
-#            proftest.go:114: Could not use temp dir /nonexistent/pprof: mkdir /nonexistent: permission denied
-# https://github.com/golang/go/blob/go1.10rc1/src/cmd/vendor/github.com/google/pprof/internal/driver/fetch.go#L283-L303
-# https://github.com/golang/go/blob/go1.10rc1/src/cmd/vendor/github.com/google/pprof/internal/driver/fetch.go#L272-L281
-# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=441052
-export HOME := /tmp
-
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH 2>/dev/null)
 RUN_TESTS := true
 # armel: ???
@@ -30,6 +21,14 @@ endif
 shlib_archs = $(shell GOVER=$(GOVER) perl debian/helpers/getshlibarches.pl)
 
 multiarch := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
+# NOTE: We need $HOME to be writable in order to run builds
+# and tests successfully.
+# pbuilder sets $HOME to /nonexistent and make it non-writable.
+# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=441052
+ifneq (0,$(shell test -w "$(HOME)"; echo $$?))
+        export HOME := /tmp
+endif
 
 %:
 	+dh --parallel $(opt_no_act) $@
@@ -70,7 +69,6 @@ ifeq (true, $(RUN_TESTS))
 	set -ex; \
 		cd src; \
 		export PATH="$(GOROOT)/bin:$$PATH"; \
-	        export PPROF_BINARY_PATH=$$(env -i go env GOTOOLDIR); \
 		eval "$$(go tool dist env)"; \
 		bash run.bash -k -no-rebuild;
 	# -k           keep going even when error occurred
