--- a/debian/rules
+++ b/debian/rules
@@ -106,6 +106,9 @@ override_dh_auto_build-arch:
 		&& $(CURDIR)/debian/helpers/goenv.sh \
 			bash ./make.bash --no-banner
 
+override_dh_strip_nondeterminism:
+	:
+
 opt_no_act :=
 ifneq (,$(findstring n,$(MAKEFLAGS)))
 	opt_no_act := --no-act
